# MaximAI-client

./: .gitignore  device-setup.sh  example-report.html  pyproject.toml  requirements.txt
models/: wakeword.ppn  wakeword_linux.ppn
src/maximai_client/: __main__.py  main.py
