[tool.poetry]
name = "maximai-client"
version = "0.1.0"
description = ""
authors = ["Julian de Ruiter <julianderuiter@gmail.com>"]
readme = "README.md"
packages = [{include = "maximai_client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
